Fixes from clemmy: - when logged in, change the menu order in top right - change pagination control position (before: top, left - now: top right, bottom right) - fixed some "empty <span>" warnings - fixed php error caused by comment in bbcode.tpl - removes "next thread/last thread" buttons - why browse the forum that way? - when viewing a topic, add topic name to top navigation (ie: "forum index > forum name > topic") - fixed search (hopefully!) - changed some headings for better contrast (white on gray to dark gray on gray
svn path=/forum/trunk/; revision=21633

--- a/SVMDesign/SVMDesign.css
+++ b/SVMDesign/SVMDesign.css
@@ -45,8 +45,9 @@ color: #383B3F
 .catrowtext      
 { 
 	font-weight: bold;
-	font-size: 12px;
-	color: #FFF;
+	font-size: 13px;
+	/*color: #FFF;*/
+	color: #444444;
 }
 
 .toprowtext      
@@ -123,11 +124,12 @@ a.topiclink               { text-decoration: underline; font-size: 13px; color: 
 a.topiclink:link          { text-decoration: underline; font-size: 13px; color: #a33; }
 a.topiclink:visited       { text-decoration: underline; font-size: 13px; color: #a33; }
 a.topiclink:hover         { text-decoration: none; font-size: 13px; color: #f00; }  
- 
-a.catlink                 { text-decoration: none; font-weight: bold; font-size: 13px; color: #FFF; }   
-a.catlink:link            { text-decoration: none; font-weight: bold; font-size: 13px; color: #FFF; }
-a.catlink:visited         { text-decoration: none; font-weight: bold; font-size: 13px; color: #FFF; }
-a.catlink:hover           { text-decoration: underline; font-weight: bold; font-size: 13px; color: #FFF; }
+
+/* is catlink still needed anywhere? */ 
+a.catlink                 { text-decoration: none; font-weight: bold; font-size: 13px; color: #444444; }
+a.catlink:link            { text-decoration: none; font-weight: bold; font-size: 13px; color: #444444; }
+a.catlink:visited         { text-decoration: none; font-weight: bold; font-size: 13px; color: #444444; }
+a.catlink:hover           { text-decoration: underline; font-weight: bold; font-size: 13px; color: #444444; }
   
 a.toprowlink              { text-decoration: none; font-size: 9px; color: #000000; }   
 a.toprowlink:link         { text-decoration: none; font-size: 9px; color: #000000; }
